--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "mongoose": "^8.3.2",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.38",
     "react": "18.3.0",
     "react-dom": "18.3.0",
