--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /.next/
 /out/
 
+
+
 # production
 /build
 
@@ -33,3 +35,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+.env
