--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
     "autoprefixer": "10.4.19",
+    "bcrypt": "^5.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
